fix: Remove white space on Carousel expand

--- a/src/styles/@tcds/components/carousel.scss
+++ b/src/styles/@tcds/components/carousel.scss
@@ -30,7 +30,12 @@
     --control-opacity: 1;
   }
 
-  &[aria-expanded="true"] {
+  &[data-expanded="true"] {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "slides";
+
     --carousel-expand-button-rotate: 180deg;
     --carousel-slides-direction: column;
   }
@@ -126,7 +131,7 @@
     flex-direction: var(--carousel-slides-direction, row);
   }
 
-  &:not([aria-expanded="true"]) > &__slides {
+  &:not([data-expanded="true"]) > &__slides {
     align-items: center;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
